# Agentic-RAG

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
graph/: consts.py  graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retriever_grader.py  router.py
graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
